force-app/main/default/objects/Response__c.object
<CustomObject>
    <description>Lender Response/Decision</description>
    <label>Response</label>
    <nameField>
        <displayFormat>Response-{0000}</displayFormat>
        <label>Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>