force-app/main/default/objects/Response__c/fields/Affiliation_Group__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Group__c</fullName>
    <label>Affiliation Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>