force-app/main/default/objects/Response__c/fields/AIG_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>AIG_Reference_Number__c</fullName>
    <label>AIG Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>