force-app/main/default/objects/Response__c/fields/Amortization_Months__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Months__c</fullName>
    <label>Amortization Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>