force-app/main/default/objects/Response__c/fields/App_Version__c.field-meta.xml
<CustomField>
    <fullName>App_Version__c</fullName>
    <label>App Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>