force-app/main/default/objects/Response__c/fields/Approval_type__c.field-meta.xml
<CustomField>
    <fullName>Approval_type__c</fullName>
    <label>Approval type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>