force-app/main/default/objects/Response__c/fields/Basic_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Basic_Loan_Amount__c</fullName>
    <label>Basic Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>