force-app/main/default/objects/Response__c/fields/Bid_Summary__c.field-meta.xml
<CustomField>
    <fullName>Bid_Summary__c</fullName>
    <label>Bid Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>