force-app/main/default/objects/Response__c/fields/Broker_Commission__c.field-meta.xml
<CustomField>
    <fullName>Broker_Commission__c</fullName>
    <label>Broker Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>