force-app/main/default/objects/Response__c/fields/BuyDown_Percent__c.field-meta.xml
<CustomField>
    <fullName>BuyDown_Percent__c</fullName>
    <label>BuyDown Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>