force-app/main/default/objects/Response__c/fields/CashBack_Amount__c.field-meta.xml
<CustomField>
    <fullName>CashBack_Amount__c</fullName>
    <label>CashBack Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>