force-app/main/default/objects/Response__c/fields/CashBack_Percent__c.field-meta.xml
<CustomField>
    <fullName>CashBack_Percent__c</fullName>
    <label>CashBack Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>