force-app/main/default/objects/Response__c/fields/CMHC_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>CMHC_Reference_Number__c</fullName>
    <label>CMHC Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>