force-app/main/default/objects/Response__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Decline Comments</description>
    <inlineHelpText>Decline Comments</inlineHelpText>
    <label>Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>