force-app/main/default/objects/Response__c/fields/Commit_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Commit_Expiry_Date__c</fullName>
    <label>Commit Expiry Date</label>
    <type>DateTime</type>
</CustomField>