force-app/main/default/objects/Response__c/fields/Commit_Type__c.field-meta.xml
<CustomField>
    <fullName>Commit_Type__c</fullName>
    <label>Commit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>