force-app/main/default/objects/Response__c/fields/Decision_Version__c.field-meta.xml
<CustomField>
    <fullName>Decision_Version__c</fullName>
    <label>Decision Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>