force-app/main/default/objects/Response__c/fields/Decline__c.field-meta.xml
<CustomField>
    <fullName>Decline__c</fullName>
    <label>Decline [Deprecated[</label>
    <length>255</length>
    <type>Text</type>
</CustomField>