force-app/main/default/objects/Response__c/fields/Gemmi_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Gemmi_Reference_Number__c</fullName>
    <label>Gemmi Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>