force-app/main/default/objects/Response__c/fields/Interest_Comp__c.field-meta.xml
<CustomField>
    <fullName>Interest_Comp__c</fullName>
    <label>Interest Comp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>