force-app/main/default/objects/Response__c/fields/Lender_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Lender_Reference_Number__c</fullName>
    <label>Lender Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>