force-app/main/default/objects/Response__c/fields/Market_Type__c.field-meta.xml
<CustomField>
    <fullName>Market_Type__c</fullName>
    <label>Market Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>