force-app/main/default/objects/Response__c/fields/MI_Policy_number__c.field-meta.xml
<CustomField>
    <fullName>MI_Policy_number__c</fullName>
    <label>MI Policy number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>