force-app/main/default/objects/Response__c/fields/Offline_Submit__c.field-meta.xml
<CustomField>
    <fullName>Offline_Submit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offline Submit</label>
    <type>Checkbox</type>
</CustomField>