force-app/main/default/objects/Response__c/fields/Other_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Other_Mortgage__c</fullName>
    <label>Other Mortgage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>