force-app/main/default/objects/Response__c/fields/Premium_Percent__c.field-meta.xml
<CustomField>
    <fullName>Premium_Percent__c</fullName>
    <label>Premium Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>