force-app/main/default/objects/Response__c/fields/Prepay_Privs__c.field-meta.xml
<CustomField>
    <fullName>Prepay_Privs__c</fullName>
    <label>Prepay Privs</label>
    <length>15</length>
    <type>Text</type>
</CustomField>