force-app/main/default/objects/Response__c/fields/Progress_Advance__c.field-meta.xml
<CustomField>
    <fullName>Progress_Advance__c</fullName>
    <label>Progress Advance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>