force-app/main/default/objects/Response__c/fields/Rate_Applied__c.field-meta.xml
<CustomField>
    <fullName>Rate_Applied__c</fullName>
    <label>Rate Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>