force-app/main/default/objects/Response__c/fields/Rate_Hold_Days__c.field-meta.xml
<CustomField>
    <fullName>Rate_Hold_Days__c</fullName>
    <label>Rate Hold Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>