force-app/main/default/objects/Response__c/fields/Repayment_Type__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Type__c</fullName>
    <label>Repayment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>