force-app/main/default/objects/Response__c/fields/Service_Branch_Transit__c.field-meta.xml
<CustomField>
    <fullName>Service_Branch_Transit__c</fullName>
    <label>Service Branch Transit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>