force-app/main/default/objects/Response__c/fields/Survey_Required__c.field-meta.xml
<CustomField>
    <fullName>Survey_Required__c</fullName>
    <label>Survey Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>