force-app/main/default/objects/Response__c/fields/Taxes_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Taxes_Paid_By__c</fullName>
    <label>Taxes Paid By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>