force-app/main/default/objects/Response__c/fields/Term_Type__c.field-meta.xml
<CustomField>
    <fullName>Term_Type__c</fullName>
    <label>Term Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>