force-app/main/default/objects/Response__c/fields/Total_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Amount__c</fullName>
    <label>Total Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>